fixed overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@
     height: 100vh;
   }
 
+  body.modal-open {
+    overflow: hidden;
+  }
+
   input,
   .dropdown-container {
     @apply border border-inputBorder bg-inputColor text-primary text-sm_variant rounded px-4 py-4 mt-2 w-full focus:outline focus-within:outline-lightPurple focus-within:outline-1;
